# halley

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  crates.txt  flake.nix  package-lock.json  test.txt  todo
crates/halley/: Cargo.toml
crates/halley-aperture/: Cargo.toml
crates/halley-aperture/src/: clock.rs  config.rs  geometry.rs  lib.rs  main.rs  standalone.rs
crates/halley-api/: Cargo.toml
crates/halley-api/src/: error.rs  lib.rs  protocol.rs  types.rs
crates/halley-capit/: Cargo.toml
crates/halley-capit/src/: capture.rs  lib.rs  screencopy.rs
crates/halley-cli/: Cargo.toml
crates/halley-cli/src/: help.rs  main.rs  parse.rs  print.rs
crates/halley-cli/src/cmd/: bearings.rs  capture.rs  cluster.rs  gamescope.rs  mod.rs  monitor.rs  node.rs  portal.rs  stack.rs  tile.rs  trail.rs
crates/halley-config/: Cargo.toml
crates/halley-config/src/: gamescope.rs  keybinds.rs  layout.rs  legacy.rs  lib.rs  parse.rs
crates/halley-config/src/keybinds/: chord.rs  codes.rs  mod.rs  modifiers.rs  types.rs
crates/halley-config/src/layout/: defaults.rs  guards.rs  mod.rs  paths.rs  runtime.rs  types.rs  update.rs
crates/halley-config/src/parse/: keybinds.rs  loader.rs  mod.rs  primitives.rs  rules.rs  validate.rs  viewport.rs
crates/halley-config/src/parse/sections/: animations.rs  apogee.rs  autostart.rs  background.rs  bearings.rs  clusters.rs  cursor.rs  debug.rs  decay.rs  decorations.rs  dev.rs  effects.rs  env.rs  field.rs  focus_ring.rs  font.rs  gamescope.rs  input.rs  keybinds.rs  mod.rs  nodes.rs  overlays.rs  physics.rs  placement.rs  rail.rs  screenshot.rs  stacking.rs  tile.rs  trail.rs  viewport.rs
crates/halley-core/: Cargo.toml
crates/halley-core/src/: bearings.rs  cluster.rs  cluster_layout.rs  cluster_policy.rs  decay.rs  docking.rs  field.rs  focus.rs  lib.rs  overlap_physics.rs  stacking.rs  tiling.rs  trail.rs  viewport.rs  visual.rs  world.rs
crates/halley-ipc/: Cargo.toml
crates/halley-ipc/src/: codec.rs  error.rs  lib.rs  protocol.rs  types.rs
crates/halley-lift/: Cargo.toml  README.md
crates/halley-lift/src/: config.rs  main.rs  mode.rs  model.rs  providers.rs  ui.rs
crates/halley-portal/: Cargo.toml
crates/halley-portal/src/: compositor_client.rs  dbus.rs  main.rs  pipewire_producer.rs  session.rs
crates/halley-rail/: Cargo.toml
crates/halley-rail/src/: main.rs  standalone.rs
crates/halley-wl/: Cargo.toml
crates/halley-wl/src/: activity.rs  anim.rs  app_env.rs  backend_iface.rs  config.rs  diagnostics.rs  frame_loop.rs  lib.rs  perf.rs  presentation.rs  render.rs  surface_ops.rs  text.rs
crates/halley-wl/src/animation/: cluster_tiles.rs  curves.rs  mod.rs  movement.rs  nodes.rs  surface.rs
crates/halley-wl/src/aperture/: config.rs  core.rs  mod.rs
crates/halley-wl/src/backend/: interface.rs  mod.rs  tty.rs  tty_dpms.rs  tty_drm.rs  tty_input.rs  vblank_throttle.rs  winit.rs
crates/halley-wl/src/backend/tty/: dpms.rs  drm.rs  frame.rs  mod.rs  output.rs  scheduler.rs  stats.rs
crates/halley-wl/src/bootstrap/: common.rs  ipc.rs  mod.rs
crates/halley-wl/src/compositor/: activity.rs  ctx.rs  debug_scene.rs  exit_confirm.rs  mod.rs  overview.rs  platform.rs  root.rs  runtime.rs  screenshot.rs  surface_ops.rs
crates/halley-wl/src/compositor/actions/: window.rs
crates/halley-wl/src/compositor/carry/: mod.rs  state.rs  system.rs
crates/halley-wl/src/compositor/clusters/: mod.rs  read.rs  (+2 more)
crates/halley-wl/src/frame_loop/: activity.rs  mod.rs
crates/halley-wl/src/input/: ctx.rs  device_config.rs  events.rs  input_events.rs  input_keyboard.rs  input_pointer.rs  input_utils.rs  key_actions.rs  mod.rs  move_anim.rs  pointer_button.rs  pointer_core.rs  pointer_dispatch.rs  pointer_drag.rs  pointer_focus.rs  pointer_frame.rs  pointer_motion.rs  pointer_motion_drag.rs  pointer_motion_resize.rs  pointer_resize.rs  resize_helpers.rs  touch.rs  utils.rs
crates/halley-wl/src/interaction/: actions.rs  mod.rs  types.rs
crates/halley-wl/src/ipc/: cluster.rs  mod.rs  monitor.rs  node.rs  rail.rs  trail.rs  view.rs
crates/halley-wl/src/overlay/: action_row.rs  banner.rs  chip.rs  cluster_bloom.rs  cluster_naming.rs  cluster_overflow.rs  exit_confirm.rs  focus_cycle.rs  fps.rs  hover_label.rs  mod.rs  observatory.rs  portal_chooser.rs  preview_source.rs  screenshot.rs  selection_marker.rs  state.rs  style.rs  text.rs  toast.rs  view.rs
crates/halley-wl/src/portal/: mod.rs
crates/halley-wl/src/rail/: mod.rs  model.rs
crates/halley-wl/src/render/: anim_utils.rs  app_icon.rs  background.rs  bearings.rs  blur.rs  clipped_surface.rs  cluster_icon.rs  cursor.rs  cursor_theme.rs  dock_render.rs  draw_primitives.rs  frame.rs  frame_render.rs  frame_runtime.rs  icon_tint.rs  layer_render.rs  layer_shell.rs  mod.rs  node.rs  node_render.rs  offscreen.rs  pin_icon.rs  render_utils.rs  rescale.rs  screenshot_icon.rs  shadow.rs  state.rs  surface_capture.rs  text.rs  utils.rs  window.rs
crates/halley-wl/src/run/: common.rs  drm.rs  input_backend.rs  ipc.rs  mod.rs  tty_backend.rs  winit_backend.rs
crates/halley-wl/src/runtime_render/: cursor_render.rs  dock_render.rs  frame_render.rs  mod.rs  node_render.rs  render_utils.rs
crates/halley-wl/src/spatial/: geometry_utils.rs  hit_test.rs  mod.rs
crates/halley-wl/src/state/: carry.rs  client.rs  clusters.rs  focus.rs  fullscreen.rs  interaction.rs  layer_shell.rs  maintenance.rs  mod.rs  monitor.rs  overlap.rs  overview.rs  render.rs  render_state.rs  runtime.rs  runtime_state.rs  spawn.rs  surface_lifecycle.rs  wayland_handlers.rs  workspace.rs  zoom.rs
crates/halley-wl/src/surface/: mod.rs  surface_ops.rs
crates/halley-wl/src/wayland/: handlers.rs  handlers_xdg.rs  layer_shell.rs  mod.rs  spawn.rs  surface_lifecycle.rs
crates/halley-wl/src/window/: capture.rs  decoration.rs  geometry.rs  layout.rs  mod.rs  stack.rs
crates/halley-wl/src/wm/: carry.rs  cluster_read.rs  clusters.rs  focus.rs  fullscreen.rs  maintenance.rs  mod.rs  overlap.rs  overlap_physics.rs  overlap_read.rs  trail.rs  workspace.rs  zoom.rs
crates/halley/src/: main.rs
(+162 files in other folders)
