[package]
name = "halley-aperture"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A status bar and utility for the Halley Wayland compositor."
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
fontdb = "0.23.0"
halley-ipc.workspace = true
rusttype = "0.9.3"
rune-cfg.workspace = true
smithay-client-toolkit.workspace = true
wayland-client.workspace = true

[[bin]]
name = "halley-aperture"
path = "src/main.rs"
