[package]
name = "halley-capit"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
memmap2 = "0.9.10"
smithay-client-toolkit = "0.20.0"
tempfile = "3.27.0"
wayland-client = "0.31.14"
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
