[package]
name = "halley-capit"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Screen capture and screencopy library for the Halley Wayland compositor."
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
memmap2 = "0.9.10"
smithay-client-toolkit = "0.20.0"
tempfile = "3.27.0"
wayland-client = "0.31.14"
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
