[package]
name = "halley-capit"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Screen capture and screencopy library for the Halley Wayland compositor."
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
image.workspace = true
memmap2 = "0.9.10"
smithay-client-toolkit.workspace = true
tempfile = "3.27.0"
wayland-client.workspace = true
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
