[package]
name = "halley-ipc"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Inter-process communication protocol for the Halley Wayland compositor."
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
postcard.workspace = true
serde.workspace = true
