[package]
name = "halley-lift"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
publish = false
description = "Search and action launcher for the Halley Wayland compositor."
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
calloop = "0.14"
calloop-wayland-source = "0.4"
fontdb = "0.23.0"
halley-api.workspace = true
halley-ipc.workspace = true
image.workspace = true
resvg = "0.47.0"
rusttype = "0.9.3"
rune-cfg.workspace = true
smithay-client-toolkit.workspace = true
wayland-client.workspace = true

[[bin]]
name = "halley-lift"
path = "src/main.rs"
