[package]
name = "halley-rail"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
publish = false
description = "A process/navigation rail for the Halley Wayland compositor."
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
halley-api.workspace = true
halley-config.workspace = true
halley-ipc.workspace = true
fontdb = "0.23.0"
image.workspace = true
resvg = "0.47.0"
rusttype = "0.9.3"
rustix = { version = "1.1.4", features = ["event"] }
smithay-client-toolkit.workspace = true
wayland-client.workspace = true

[[bin]]
name = "halley-rail"
path = "src/main.rs"
