[package]
name = "halley-wl"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Wayland backend and rendering implementation for the Halley Wayland compositor."
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
halley-aperture.workspace = true
halley-capit.workspace = true
halley-config.workspace = true
halley-core.workspace = true
halley-ipc.workspace = true

# Wayland compositor toolkit
smithay = { version = "0.7.0", default-features = false, features = [
  "backend_winit",
  "backend_drm",
  "backend_gbm",
  "backend_egl",
  "backend_libinput",
  "backend_session_libseat",
  "backend_udev",
  "backend_session",
  "renderer_gl",
  "wayland_frontend",
  "desktop",
] }
calloop = "0.14.4"

# Input
xkbcommon = "0.9.0"
smallvec = "1.15.1"

# Linux
rustix = { version = "1.1.4", features = ["runtime"] }

# Logging
eventline = "0.8.0"

# Useful
once_cell = "1.21.4"

# IPC
pollster = "0.4.0"

# Rendering/math + serialization (phase 1 alignment with crates.txt)
glam = "0.32.1"
wgpu = "29.0.1"
postcard.workspace = true
serde.workspace = true
notify = "8.2.0"
xcursor = "0.3.10"
image.workspace = true
resvg = "0.47.0"
regex = "1.12.3"
cosmic-text = { version = "0.18.2", features = ["swash"] }
