[package]
name = "halley"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The entry point for the Halley Wayland compositor."
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
halley-wl.workspace = true
